# agent-model-gateway

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
agents/openai-pr-reviewer/: agent.yaml
agents/openai-pr-triage-lite/: agent.yaml  output.schema.json  prompt.md
agents/overlays/: payments-team.yaml
agents/pr-reviewer/: agent.yaml  output.schema.json  prompt.md
app/: __init__.py  api.py  cli.py  config.py
app/domain/: __init__.py  agent.py  capabilities.py  identity.py  messages.py  models.py  resolution.py  responses.py
app/gateway/: errors.py  events.py  registry.py  resolver.py  router.py  service.py
app/providers/: base.py  fake_provider.py  openai_provider.py
app/runtime/: __init__.py  errors.py  loader.py  overlays.py  runner.py  validation.py
config/: model-profiles.yaml  models.yaml
docs/: architecture.md  demo-script.md  ec2-deployment.md  flowchart.md  initial-architecture.md  openai-real-models.md  production-roadmap.md  staged-architecture.md  system-design.md  technical-design.md  tool-mcp-gateway.md
docs/adr/: 0001-separate-runtime-and-gateway.md
examples/: openai-pr-reviewer-request.json  openai-pr-triage-lite-request.json  pr-reviewer-request.json  resolve-model-request.json
prompts/: 01-scaffold.md  02-domain-model.md  03-gateway.md  04-agent-runtime.md  05-cli-demo.md  06-tests.md  07-architecture-docs.md  08-final-review.md
specs/: acceptance-criteria.md  agent-definition-example.md
tests/integration/: test_api.py  test_cli.py  test_health.py
tests/unit/: test_config_loading.py  test_domain_models.py  (+4 more)
