[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "agent-model-gateway"
version = "0.1.0"
description = "Proof of concept for a provider-neutral agent runtime and model gateway."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "openai>=1.59",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "typer>=0.15",
    "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "types-PyYAML>=6.0",
]

[project.scripts]
amg = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
